k8s-workspace/spp-webapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spp-webapp-deploy
  owner: spp
  creationTimestamp: null
  labels:
    app: webapp-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spp-webapp
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spp-webapp
    spec:
      containers:
        - name: spp-webapp-con
          image: vprocontainers/vprofileapp
          imagePullPolicy: Always
          ports:
            - name: spp-webapp-port
              containerPort: 8080
          resources:
            requests:
              cpu: 1
              memory: "1Gi"
            limits:
              cpu: 2
              memory: "2Gi"
          volumeMounts:
            - name: spp-webapp-data
              mountPath: /usr/share/tomcat6/
      volumes:
        - name: spp-webapp-data
          persistentVolumeClaim: 
            claimName: spp-webapp-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: spp-webapp-svc
spec:
  type: ClusterIp
  selector:
    app: spp-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: spp-webapp-port
