k8s-workspace/spp-webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spp-webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: <my-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spp-webapp-svc
                port:
                  number: 8080
